<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ListAnime</string>
    <string name="anime_name">Judul Anime</string>
    <string name="description">Sinopsis</string>
    <string name="sinopsis_anime">Sinopsis Anime</string>
    <string name="attack_on_titan">Attack On Titan</string>
    <string name="todo">TODO</string>

    <string-array name="data_name">
        <item>Attack On Titan</item>
        <item>Blue Lock</item>
        <item>Boku No Hero Academia</item>
        <item>Bungou Stray Dogs</item>
        <item>Chainsaw Man</item>
        <item>Death Note</item>
        <item>Jujutsu Kaisen</item>
        <item>Kimetsu No Yaiba</item>
        <item>Spy X Family</item>
        <item>Tokyo Ghoul</item>
    </string-array>

    <string-array name="data_description">
        <item>Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called Titans, forcing humans to hide in fear behind enormous concentric walls.\n
        What makes these giants truly terrifying is that their taste for human flesh is not born out of hunger but what appears to be out of pleasure.\n\n
        - Adaptation: Shingeki no Kyojin\n
        - Side story: Shingeki no Kyojin OVA\n
        - Summary: Shingeki no Kyojin: Ano Hi Kara, Shingeki no Kyojin: Chronicle, 10-pun de Oitsukeru: Shingeki no Kyojin, 15-fun de Oitsukeru: Shingeki no Kyojin, 20-pun de Oitsukeru: Shingeki no Kyojin\n
        - Other: Shingeki no Kyojin Picture Drama, Shingeki no Kyotou\n
        - Alternative version: Shingeki no Kyojin Movie 1: Guren no Yumiya, Shingeki no Kyojin Movie 2: Jiyuu no Tsubasa\n
        - Sequel: Shingeki no Kyojin Season 2\n
        - Spin-off: Shingeki no Kyojin: Kuinaki Sentaku, Shingeki! Kyojin Chuugakkou, Shingeki no Kyojin: Lost Girls\n
        - Character: Snickers x Shingeki no Kyojin
        </item>
        <item>High school soccer players from across Japan gather for a controversial project designed to create the best and most egoistic striker in the world.\n\n
        Yoichi Isagi was mere moments away from scoring a goal that would have sent his high school soccer team to the nationals, but a split-second decision to pass the ball to his teammate cost him that reality. Bitter, confused, and disappointed, Isagi wonders if the outcome would have been different had he not made the pass. When the young striker returns home, an invitation from the Japan Football Union awaits him. Through an arbitrary and biased decision-making process, Isagi is one of three hundred U-18 strikers selected for a controversial project named Blue Lock.\n\n
        The projects ultimate goal is to turn one of the selected players into the star striker for the Japanese national team. To find the best participant, each diamond in the rough must compete against others through a series of solo and team competitions to rise to the top. Putting aside his ethical objections to the project, Isagi feels compelled to fight his way to the top, even if it means ruthlessly crushing the dreams of 299 aspiring young strikers.\n\n
        Adaptation: Blue Lock\n
        Sequel: Blue Lock 2nd Season\n
        Spin-off: Blue Lock: Episode Nagi
        </item>
        <item>The story follows the adventures of Izuku Midoriya, a boy who dreams of becoming a superhero himself despite being Quirkless.\n
        He is scouted by the worlds greatest hero, All Might, who bestows his Quirk to Midoriya after recognizing his potential, and helps\n
        to enroll him in a prestigious high school for superheroes in training.\n\n
        The appearance of quirks, newly discovered super powers, has been steadily increasing over the years, with 80 percent of humanitypossessing\n
        various abilities from manipulation of elements to shapeshifting. This leaves the remainder of the world completely powerless, and Izuku Midoriya is one such individual.\n\n
        Since he was a child, the ambitious middle schooler has wanted nothing more than to be a hero. Izuku unfair fate leaves him admiring heroes and taking notes on them whenever\n
        he can. But it seems that his persistence has borne some fruit: Izuku meets the number one hero and his personal idol, All Might. All Mights quirk is a unique ability that can be inherited,\n
        Enduring many months of grueling training, Izuku enrolls in UA High, a prestigious high school famous for its excellent hero training program, and this years freshmen look especially promising. With his bizarre but talented classmates and the looming threat of a villainous organization, Izuku will soon learn what it really means to be a hero.</item>

        <item>Bungo Stray Dogs is a manga and anime series that follows Atsushi Nakajima, a young man who can turn into a were-tiger and joins the Armed Detective Agency, a group of people with supernatural powers </item>
        <item>Chainsaw Man is a manga series that follows the story of Denji, an impoverished young man who makes a contract that fuses his body with that of a dog-like devil named Pochita, granting him the ability to transform parts of his body into chainsaws.</item>
        <item>Death Note is a manga and anime series that follows a high school student who discovers a supernatural notebook that can kill anyone whose name is written in it.</item>
        <item>Jujutsu Kaisen is an anime and manga series that revolves around curses and malevolent spirits born from human fears and negative emotions.</item>
        <item>After his family was brutally murdered and his sister turned into a demon, Tanjiro Kamados journey as a demon slayer began. Tanjiro and his comrades embark on a new mission aboard the Mugen Train, on track to despair. </item>
        <item>The story follows a spy who has to "build a family" to execute a mission, not realizing that his adopted daughter is a telepath, and the woman he agrees to marry is a skilled assassin.  </item>
        <item>Tokyo Ghoul is a manga set in an alternate reality where ghouls, creatures that look like normal people but can only survive by eating human flesh, live among the human population in secrecy </item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/aot</item>
        <item>@drawable/bluelock</item>
        <item>@drawable/bnha</item>
        <item>@drawable/bsd</item>
        <item>@drawable/chs</item>
        <item>@drawable/deathnote</item>
        <item>@drawable/jujutsu</item>
        <item>@drawable/kimetsu</item>
        <item>@drawable/sxf</item>
        <item>@drawable/tg</item>
    </integer-array>

    <string-array name="data_status">
        <item>Finished Airing</item>
        <item>On Going</item>
        <item>On Going</item>
        <item>On Going</item>
        <item>Finished Airing</item>
        <item>Finished Airing</item>
        <item>On Going</item>
        <item>Finished Airing</item>
        <item>On Going</item>
        <item>Finished Airing</item>
    </string-array>

    <string name="profile_image">aot</string>
    <string name="user_name" tools:ignore="DuplicateDefinition">Gideon Aprileo</string>
    <string name="user_email" tools:ignore="DuplicateDefinition">gideapril@gmail.com</string>
    <string name="about_me">About Me :</string>
    <string name="my_description">Hello, I am part of the Android Development Cohort at Bangkit Academy. My goal of making the List Anime application is to fulfill the Learning Path "Learning to Make Android Applications for Beginners". I hope you guys can like what I have made. Thank you.</string>
    <string name="todo2">TODO</string>
    <string name="judulDetail">Judul Detail</string>
    <string name="isijudulDetail">TextView</string>


</resources>