<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/gray_dark"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:ignore="ExtraText">

        <!-- Tambahkan ikon kembali di sini -->
        <ImageView
            android:id="@+id/toolbar_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/todo2"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true"
        android:layout_marginTop="8dp">

        <!-- RelativeLayout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:background="@android:color/white">

            <!-- CircleImageView -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/aot"
                android:layout_marginTop="20dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFF" />

            <!-- TextView for Name -->
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <!-- TextView for Email -->
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/user_email"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEmail"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/about_me"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAbout"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:text="@string/my_description"
                android:textAlignment="gravity"
                android:justificationMode="inter_word"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                tools:targetApi="o" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
